<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailUser">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|enterAlways"
            app:contentScrim="?attr/colorPrimary"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layout_header">
                <ImageView
                    android:contentDescription="@string/desc_foto_user"
                    android:id="@+id/img_user"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    tools:src="@tools:sample/avatars"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    tools:text="@string/user_name"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_user" />
                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:text="@string/username"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_username_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    tools:text="@string/username_user"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_constraintTop_toBottomOf="@id/tv_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:text="@string/company"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_constraintTop_toBottomOf="@id/tv_username_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_user_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    tools:text="@string/name_company"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_constraintTop_toBottomOf="@id/tv_company"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:text="@string/location"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_company"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_user_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    tools:text="@string/name_location"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_constraintTop_toBottomOf="@id/tv_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:text="@string/repository"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_user_repository"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:minHeight="48dp"
                    android:onClick="onClick"
                    android:focusable="true"
                    tools:text="@string/user_repository"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_repository" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/favorite_button"
                android:foregroundGravity="bottom"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:fabSize="normal"
                app:layout_anchor="@id/layout_header"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end|bottom"
                app:srcCompat="@drawable/ic_fav_border"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <com.google.android.material.tabs.TabLayout
            android:contentDescription="@string/follower"
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSecondaryVariant"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/light"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ScrollingActivity">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>